...
    "placeholders": {"skin": {"type": "String"}}
  },
  "symbolSkinOptionSelected": "{skin} symbol skin, selected",
  "@symbolSkinOptionSelected": {
    "placeholders": {"skin": {"type": "String"}}
  },
  "playNow": "PLAY NOW",
  "viewHistory": "VIEW HISTORY",
  "retryStats": "Retry stats",
  "wins": "WINS",
  "draws": "DRAWS",
  "losses": "LOSSES",
  "backToHome": "Back to Home",
  "match": "MATCH",
...
